@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.2.0 on Tue May 15 10:13:22 2007 by eitan@lifebook-->
+<!--Generated with glade3 3.2.0 on Wed May 16 11:07:50 2007 by eitan@lifebook-->
 <glade-interface>
   <widget class="GtkWindow" id="window1">
     <child>
@@ -32,6 +32,8 @@
                           <widget class="GtkTextView" id="textview_monitor">
                             <property name="visible">True</property>
                             <property name="editable">False</property>
+                            <signal name="motion_notify_event" handler="_onLinkMotion"/>
+                            <signal name="key_press_event" handler="_onLinkKeyPress"/>
                           </widget>
                         </child>
                       </widget>
