@@ -1,4 +1,11 @@
 2007-05-15  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/api_view.py: Epydoced.
+	* plugins/event_monitor.glade: Reattached signals that got lost.
+	* plugins/event_monitor.py:  Epydoced.
+	* src/lib/accerciser/pyatspi.zip: Updated to revision 927.
+
+2007-05-15  Eitan Isaacson  <eitan@ascender.com>
 	
 	* plugins/interface_view.py: Epydoced.
 	
